test/org/midica/testfiles/failing/var-without-args.midica
INCLUDE inc/instruments.midica

VAR 

0  c  /4
